--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Open+Sans:wght@300&display=swap"
       rel="stylesheet"
-    />
     />
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -114,7 +114,7 @@
       </div>
     </section>
 
-    <section class="descrition">
+    <section class="description">
       <div class="container">
         <div class="description-inner">
           <h2 class="description-title">Experience the rush today</h2>
@@ -173,18 +173,32 @@
     </section>
 
     <footer class="footer">
-      <div class="footer-icon">
-        <ul class="social">
-          <li class="twitter"></li>
-          <li class="facebook"></li>
-          <li class="google"></li>
-        </ul>
+      <div class="footer-top">
+        <div class="navigation">
+          <ul class="social-list">
+            <li class="nav-item">
+              <a href="#" class="nav-link"
+                ><i class="fa fa-telegram" aria-hidden="true"></i
+              ></a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link"
+                ><i class="fa fa-facebook-square" aria-hidden="true"></i
+              ></a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link"
+                ><i class="fa fa-instagram" aria-hidden="true"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="footer-description">
-        <h3>Copyright the range</h3>
-      </div>
-      <div class="footer-text">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+      <div class="footer-bottom">
+        <div class="container">
+         <p class="footer-text"> 
+          <span class="footer-copyright">Copyright The Range</span>lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        </div>
       </div>
     </footer>
   </body>
